--- a/src/main/resources/lang/de.yml
+++ b/src/main/resources/lang/de.yml
@@ -1,119 +1,124 @@
-data.load: §aDaten wurden erneut geladen
-data.save: §aDaten wurden gesichert
+# Not yet fully translated!
 
-create.success: §aNetzwerk %network wurde erstellt
-create.success.eco: §aNetzwerk %network wurde für §r%value$§a erstellt
-create.exists: §bEs existiert bereits ein Netzwerk mit diesem Namen, bitte wähle einen anderen Namen
-create.noname: §eDein Netzwerk benötigt einen Namen, um diesen zu vergeben, nutze §f/net create <name>
-create.fail: §cDas Netzwerk konnte nicht korrekt erstellt werden, bitte kontaktiere den Server Admin
-create.noowner: §cCommand was not executed by player!\nPlease specify the owner with /net create <name> <owner>
-create.nomoney: §cDir fehlen §r%value$§c um ein neues Netzwerk zu erstellen!
+prefix: "<green>[Networks]<reset>  "
 
-delete.success: §aNetzwerk %network wurde gelöscht
-delete.sucess.eco: §aNetzwerk %network wurde gelöscht, du hast §f%value$ §azurück erhalten
-delete.confirm: §aBist du dir sicher, dass du dieses Netzwerk löschen willst? Dann gib §f/net delete <name> confirm §aein
-delete.fail: §cDieses Netwerk existiert nicht, vielleicht hast du dich vertippt?
-delete.nonetwork: §cBitte gib das Netzwerk an, dass du löschen möchtest
+data.reload.networks: <prefix>Netzwerke wurden neu geladen
+data.save.networks: <prefix>Netzwerke wurden gespeichert
+data.reload.config: <prefix>Konfiguration neu geladen
+data.save.config: <prefix>Konfiguration gespeichert
 
-select.noselection: §cEs wurde kein Netzwerk ausgewählt, bitte wähle ein Netzwerk aus mit §f/net select <network>
-select.success: §a%network wurde ausgewählt
-select.notexisting: §cDieses Netzwerk existiert nicht, vielleicht hast du dich vertippt?
-select.nonetwork: §cBitte gib das Netwerk an, dass du auswählen möchtest
+create.success: <prefix>Netzwerk <green><1><white> wurde erstellt.
+create.exists: <prefix><yellow>Es gibt bereits ein Netzwerk mit diesem Namen, bitte wähle einen anderen Namen!
 
-nopermission: §cAuf dieses Netzwerk hast du leider keine Rechte! Du musst entweder Netzwerk Besitzer sein oder die §cnetwork.admin§c Berechtigung haben!
+delete.success: <prefix>Netzwerk <green><1><white> wurde gelöscht.
+delete.confirm: <prefix>Bist du dir sicher, dass du Netzwerk <1> löschen möchtest? Bitte bestätige mit <yellow>/net delete <1> confirm
 
-list.empty: §cDu besitzt derzeit noch keine Netzwerke
-list.noplayer: §cCommand was not executed by player! Please specify the player with /net list <player>
-list: §aDu besitzt die folgenden Netwerke
+select.noselection: <prefix><red>Kein Netzwerk wurde ausgewählt, bitte wähle ein Netzwerk aus mit <white>/net select <network>
+select.success: <prefix>Netzwerk <green><1><white> wurde ausgewählt.
 
-listall.empty: §cAuf diesem Server gibt es derzeit keine Netzwerke
-listall: §aFolgende Netwerke existieren auf diesem Server
+invalidnetwork: <prefix><red>Es gibt kein Netzwerk mit dem Namen <white><1>
 
-component.input.add: §aEinfüllkiste bei %position wurde zu %network hinzugefügt
-component.sorting.add: §aSortierkiste bei %position wurde zu %network hinzugefügt
-component.sorting.noitem: §cBitte gib an, welches item deine Sortierkiste erhalten soll
-component.sorting.setitem: §aItemtyp %material wurde zur Sortierkiste bei %position hinzugefügt.
-component.sorting.removeitem: §aItemtyp %material wurde von der Sortierkiste bei %position entfernt.
-component.misc.add: §aRestekiste bei %position wurde zu %network hinzugefügt
-component.select: §aKomponententyp wurde ausgewählt, bitte rechts klicke den Block, der hinzugefügt werden soll
-component.remove: §cKomponent bei %position wurde entfernt
-component.exploded: §4Komponent bei §f%position§4 aus dem Netzwerk §f%network§4 wurde durch eine Explosion zerstört!
-component.noaction: §cBitte gib an, was du tun möchtest. Hinzufügen oder löschen?
-component.notype: §cBitet gib die Art von Komponent an
-component.limit: §cDu hast das Limit an Komponenten erreicht, bitte erweitere das Limit mit §f/net upgrade limit
-component.invalid_block: §c%material Blöcke können keine Netzwerk Komponenten sein
-component.nocomponent: §cDieser Block ist kein Netzwerkkomponent!
-component.priority: §eDie Priorität des Komponenten wurde auf §f%value §egeändert.
+permission.server: <prefix><red>Dieser Befehl ist nur für Server Administratoren verfügbar!
+permission.owner: <prefix><red>Du hast keine Berechtigung, dieses Netzwerk zu bearbeiten!\nDu musst Netzwerkbesitzer oder Server Administrator sein!
+permission.user: <prefix><red>Du hast keine Rechte auf diesem Netzwerk!\nDu musst Nutzer des Netzwerks sein!
 
-upgrade.noprice: §cFür dieses Upgrade wurde kein Preis gesetzt, bitte kontaktiere deinen Server Administrator!
-upgrade.noeconomy: §cEin Problem mit dem Economy Provider ist aufgetreten, bitte kontaktiere deinen Server Administrator!
-upgrade.maxed: §cDu hast die maximale Anzahl an Upgrades erreicht.
-upgrade.disabled: §cDiese Upgrade ist deaktiviert.
-upgrade.nomoney: §cDir fehlen §f%value$§c um dieses Upgrade zu kaufen!
-upgrade.success: §aUpgrade wurde für §r%value$§a gekauft.
+list.empty: <prefix>Du hast keine Netzwerke!
+list: "<prefix>Du hast Rechte auf diesen Netzwerken:"
+list.owned: "<prefix>Du besitzt diese Netzwerke:"
 
-rangeupgrade.last: §eDu hast bereits die höchste Upgradestufe erreicht.
-rangeupgrade.alreadyupgraded: §cDieses Upgrade hast du bereits installiert. Das nächste Upgrade wäre §fReichweite %value.
-rangeupgrade.unlockfirst: §cDu musst zuerst das Upgrade §Reichweite %value§c freischalten.
-rangeupgrade.success: Reichweite %value§a wurde soeben auf dem Netzwerk §f%network§a freigeschalten!
+list.foreign.empty: <prefix>Spieler <1> hat keine Netzwerke!
+list.foreign: "<prefix>Spieler <1> ist auf diesen Netzwerken hinzugefügt:"
+list.foreign.owned: "<prefix>Spieler <1> besitzt diese Netzwerke:"
 
-location.none: §cYou need to specify a container location\n/net container <type> <x> <y> <z> <world>
-location.occupied: §cAn dieser Position befindet sich bereits ein Komponent
+listall.empty: <prefix>Auf diesem Server gibt es keine Netzwerke!
+listall: "<prefix>Auf diesem Server gibt es folgende Netzwerke:"
 
-user.specify: §cBitte gib den Spieler an, den du hinzufügen willst.
-user.action: §cBitte gib an, was du machen möchtest.
-user.add: §aNeuer Nutzer §f%player§a wurde dem Netzwerk hinzugefügt.
-user.remove: §f%player §awurde vom Netzwerk entfernt.
-
-merge.identical: §cDas ist leider nicht möglich.
-merge.invalid: §cEs gibt kein Netzwerk namens §f%text
-merge.nopermission: §cZum Kombinieren von zwei Netzwerken musst du der Besitzer von beiden sein!
-merge.nonetwork: "§cZum Kombinieren musst du zwei Netzwerke angeben:  §f/net merge <netzwerk1> <netzwerk2>"
-merge.success: §aNetzwerke §f%net1 §aund §f%net2 §awurden erfolgreich kombiniert.
-
-info.input: "§aTyp: §rEinfüllkiste§a\nNetzwerk: §r%network§a\nBlock: §r%position"
-info.sorting: "§aTyp: §rSortierkiste§a\nNetzwerk: §r%network§a\nBlock: §r%position§a\nPriorität: §r%value§a\nFilter: §r%items"
-info.misc: "§aTyp: §rRestekiste§a\nNetzwerk: §r%network§a\nBlock: §r%position\n§aPriorität: §r%value§a"
-
-items.noitems: "§cIn diesem Netzwerk befinden sich noch keine Items."
-items.message: "§a§lItems im Netzwerk §f%network§a:"
-
-value.notpositive: §cDieser Wert muss größer als 0 sein, er wurde auf 1 gesetzt.
-
-item.name.wand.0: §r§cNetzwerk Konfigurator
-item.name.wand.1: §r§cPrioritäts Konfigurator
-item.name.input: §rEinfüllkiste
-item.name.sorting: §rSortierkiste
-item.name.misc: §rRestekiste
-item.name.upgrade: §r§lTelemetrie Antenne v%level
+info.title: "\n              <bold><dark_green>Netzwerk Informationen\n<reset><dark_green>=============================================\n"
+info.name: "Name:  <1>"
+info.owner: "Besitzer: <1>"
+info.users: "Nutzer: <1>"
+info.components.total: "Komponenten: <1>"
+info.range: "Maximale Reichweite: <1>"
+info.components.input: "Einfüllkisten: "
+info.components.sorting: "Sortierkisten: "
+info.components.misc: "Restekisten: "
 
 
-item.lore.wand.0:
-  - "§rRechts klicke auf einen Netzwerk Komponenten um Informationen über diesen zu sehen"
-  - "§rSchleiche und Rechts klicke auf eine Sortierkiste um das Item in deiner Zweithand als Filter hinzuzufügen"
-  - "§rSchleiche und Links klicke auf eine Sortierkiste um das Item in deiner Zweithand als Filter zu entfernen"
+component.input.add: <prefix>Einfüllkiste bei <1> wurde hinzugefügt zum Netzwerk <2>!
+component.sorting.add: <prefix>Sortierkiste bei <1> wurde hinzugefügt zum Netzwerk <2>!
+component.sorting.setitem: <prefix>Item Typ <2> wurde als Filter für die Sortierkiste bei <1> hinzugefügt.
+component.sorting.removeitem: <prefix>Item Typ <2> wurde als Filter für die Sortierkiste bei <1> entfernt.
+component.misc.add: <prefix>Restekiste <1> wurde hinzugefügt zum Netzwerk <2>!
+component.remove: <prefix><red>Komponent bei <1> wurde entfernt.
+component.exploded: <prefix><dark_red>Komponent bei <white><1><dark_red> aus dem Netzwerk <white><2><dark_red> wurde gesprengt!
+component.nocomponent: <prefix><yellow>Dies ist kein Netzwerkkomponent!
+component.priority: <prefix>Priorität wurde auf <1> gesetzt,
+
+rangeupgrade.last: <prefix><yellow>You already reached the maximum upgrade level.
+rangeupgrade.alreadyupgraded: <prefix><yellow>You already installed this upgrade, the next upgrade is range Tier <white><1>
+rangeupgrade.unlockfirst: <prefix><yellow>You need to unlock range Tier <white><1><yellow> first!
+rangeupgrade.success: <prefix>Successfully upgraded network <2> to Tier <1>!
+
+user.add: <prefix>Successfully added <2> to the network <1>
+user.remove: <prefix>Successfully removed <2> from the network <1>
+user.owner: <prefix>Transferred ownership of <2> to the Player <1>
+user.add.nochange: <prefix>Player <2> is already added to network <1>
+user.remove.nochange: <prefix>Player <2> hasn't been added to network <1>
+user.owner.nochange: <prefix>Player <2> was already owner of network <1>
+
+merge.identical: <prefix><red>Sorry but the laws of physics can't be broken.
+merge.nopermission: <prefix><red>You need to be owner of both networks in order to merge them!
+merge.success: <prefix>Successfully merged network <2> into <1>
+
+rename.success: <prefix>Successfully renamed network <1> to <2>
+rename.taken: <prefix>Name <1> is already taken by another network.
+
+wand.mode: "<prefix><blue>Wand mode set to [<1>]"
+wand.mode.0: "Filter"
+wand.mode.1: "Priority"
+wand.info.input: "<prefix><green>Type: <reset>Input Container<green>\nNetwork: <reset><1><green>\nLocation: <reset><2><green>\n"
+wand.info.sorting: "<prefix><green>Type: <reset>Sorting Container<green>\nNetwork: <reset><1><green>\nLocation: <reset><2><green>\nPriority: <reset>%value<green>\nFilters: <reset><3>\n"
+wand.info.misc: "<prefix><green>Type: <reset>Misc Container<green>\ nNetwork: <reset><1><green>\nLocation: <reset><2>\nPriority: <reset>%value<green>\n"
+
+items.noitems: "<prefix><red>There are no items in your storage network."
+items.message: "<green><bold>Total items in network <white><1><green>:"
+
+value.notpositive: <prefix><red>This value needs to be positive, it was set back to 1.
+
+item.name.wand0: <reset><red>Network Wand
+item.name.wand1: <reset><blue>Priority Wand
+item.name.input: <reset>Input Container
+item.name.sorting: <reset>Sorting Container
+item.name.misc: <reset>Miscellaneous Container
+item.name.upgrade1: <reset><bold>Telemetry Antenna Tier 1
+item.name.upgrade2: <reset><bold>Telemetry Antenna Tier 2
+item.name.upgrade3: <reset><bold>Telemetry Antenna Tier 3
+item.name.upgrade4: <reset><bold>Telemetry Antenna Tier 4
+
+item.lore.wand0:
+  - "<reset>Right click any network component to show information about it"
+  - "<reset>Sneak + Right click on a sorting chest with an item in the offhand to apply a filter"
+  - "<reset>Sneak + Left click with an item in the offhand to remove a filter"
   - ""
-  - "§rLinks klicke, um den Modus des Netzwerk Konfigurators zu ändern"
+  - "<reset>Left click to switch mode"
 
-item.lore.wand.1:
-  - "§rRechts klicke auf einen Netzwerk Komponenten um Informationen über diesen zu sehen"
-  - "§rSchleiche und Rechts klicke auf einen Netzwerk Komponenten um dessen Priorität zu erhöhen"
-  - "§rSchleiche und Links klicke auf einen Netzwerk Komponenten um dessen Priorität zu senken"
+item.lore.wand1:
+  - "<reset>Right click any network component to show information about it"
+  - "<reset>Sneak + Right click on a network component to increase its priority"
+  - "<reset>Sneak + Left click on a network component to decrease its priority"
   - ""
-  - "§rLinks klicke um den Modus des Netzwerk Konfigurators zu ändern"
+  - "<reset>Left click to switch mode"
 
 item.lore.input:
-  - "§r§9Verteilt items automatisch in die entsprechenden Sortierkisten und Restekisten"
+  - "<reset><blue>Sorts items into sorting containers and misc containers"
 item.lore.sorting:
-  - "§r§9Nur items die dem Filter entsprechen gelangen in diese Kiste"
+  - "<reset><blue>Only accepts items that match the filter of this container"
   - ""
-  - "§rFilter Items:"
+  - "<reset>Filter Items:"
 item.lore.misc:
-  - "§r§9Items für die es keine Sortierkiste gibt landen hier"
+  - "<reset><blue>All remaining items will go into these"
 
 item.lore.upgrade:
-  - "§rKlicke auf einen Netzwerkkomponenten um dessen Netzwerk zu upgraden"
+  - "<reset>Click on a network component to apply this upgrade on its network"
 
-notice: §eVolles Inventar und unordentliche Kisten? Erstelle ein automatisches Sortiersystem mit §f/network§e!
-
-invalid: §cUngültiger Befehl, bitte gib §f/net help§c ein für alle Befehle
+notice: <yellow>Having inventory problems? Try out <white>/networks <yellow>to create a fully automated storage network!
