--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -76,8 +76,8 @@ wand.mode: "<prefix><blue>Wand mode set to [<1>]"
 wand.mode.0: "Filter"
 wand.mode.1: "Priority"
 wand.info.input: "<prefix><green>Type: <reset>Input Container<green>\nNetwork: <reset><1><green>\nLocation: <reset><2><green>\n"
-wand.info.sorting: "<prefix><green>Type: <reset>Sorting Container<green>\nNetwork: <reset><1><green>\nLocation: <reset><2><green>\nPriority: <reset>%value<green>\nFilters: <reset><3>\n"
-wand.info.misc: "<prefix><green>Type: <reset>Misc Container<green>\ nNetwork: <reset><1><green>\nLocation: <reset><2>\nPriority: <reset>%value<green>\n"
+wand.info.sorting: "<prefix><green>Type: <reset>Sorting Container<green>\nNetwork: <reset><1><green>\nLocation: <reset><2><green>\nPriority: <reset><3><green>\nFilters: <reset><4>\n"
+wand.info.misc: "<prefix><green>Type: <reset>Misc Container<green>\nNetwork: <reset><1><green>\nLocation: <reset><2><green>\nPriority: <reset><3><green>\n"
 
 items.noitems: "<prefix><red>There are no items in your storage network."
 items.message: "<green><bold>Total items in network <white><1><green>:"
