--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -1,5 +1,56 @@
 prefix: "<green>[Networks]<reset>  "
 
+help: "\n
+<bold><dark_green>          Networks v2.0 - Help Menu
+\n============================================</dark_green></bold>
+
+\n<click:suggest_command:/net create>/net create (id)</click> - <yellow>Create a new network</yellow>
+\n<click:suggest_command:/net rename>/net rename (id)</click> - <yellow>Rename a network</yellow>
+\n<click:suggest_command:/net delete>/net delete (id)</click> - <yellow>Delete a network</yellow>
+\n
+\n<click:suggest_command:/net select>/net select (id)</click> - <yellow>Select a network</yellow>
+\n
+\n<click:suggest_command:/net list>/net list</click> - <yellow>List all your networks</yellow>
+\n<click:suggest_command:/net listall>/net listall</click> - <yellow>List all of the networks on the server</yellow>
+\n<click:suggest_command:/net list>/net list (player)</click> - <yellow>List networks of another player</yellow>
+\n
+\n<click:suggest_command:/net user add>/net user add (player)</click> - <yellow>Give a player access to your network</yellow>
+\n<click:suggest_command:/net user remove>/net user remove (player)</click> - <yellow>Revoke a player's access to your network</yellow>
+\n
+\n<click:suggest_command:/net items>/net items</click> - <yellow>List all your items</yellow>
+\n<click:suggest_command:/net view>/net view</click> - <yellow>See all your items in a visual UI</yellow>
+\n
+\n<click:suggest_command:/net merge>/net merge (net1) (net2)</click> - <yellow>Merge net2 into net1</yellow>
+\n
+"
+
+help.admin: "\n
+<bold><dark_green>          Networks v2.0 - Help Menu
+\n============================================</dark_green></bold>
+
+\n<click:suggest_command:/net data save>/net data save</click> - <yellow>Save all networks</yellow>
+\n<click:suggest_command:/net data reload>/net data reload</click> - <yellow>Reload the configs</yellow>
+\n
+\n<click:suggest_command:/net create>/net create (id)</click> - <yellow>Create a new network</yellow>
+\n<click:suggest_command:/net rename>/net rename (id)</click> - <yellow>Rename a network</yellow>
+\n<click:suggest_command:/net delete>/net delete (id)</click> - <yellow>Delete a network</yellow>
+\n
+\n<click:suggest_command:/net select>/net select (id)</click> - <yellow>Select a network</yellow>
+\n
+\n<click:suggest_command:/net list>/net list</click> - <yellow>List all your networks</yellow>
+\n<click:suggest_command:/net listall>/net listall</click> - <yellow>List all of the networks on the server</yellow>
+\n<click:suggest_command:/net list>/net list (player)</click> - <yellow>List networks of another player</yellow>
+\n
+\n<click:suggest_command:/net user add>/net user add (player)</click> - <yellow>Give a player access to your network</yellow>
+\n<click:suggest_command:/net user remove>/net user remove (player)</click> - <yellow>Revoke a player's access to your network</yellow>
+\n
+\n<click:suggest_command:/net items>/net items</click> - <yellow>List all your items</yellow>
+\n<click:suggest_command:/net view>/net view</click> - <yellow>See all your items in a visual UI</yellow>
+\n
+\n<click:suggest_command:/net merge>/net merge (net1) (net2)</click> - <yellow>Merge net2 into net1</yellow>
+\n
+"
+
 data.reload.networks: <prefix>Reloaded network files
 data.save.networks: <prefix>Saved networks to files
 data.reload.config: <prefix>Reloaded config files
