--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -3,7 +3,7 @@ prefix: "<green>[Networks]<reset>  "
 version: "<dark_green>Networks Plugin</dark_green> by <yellow>Quantum625</yellow>\n<aqua>Version: </aqua><1>"
 
 help: "\n
-<bold><dark_green>          Networks v2.0 - Help Menu
+<bold><dark_green>          Networks v<1> - Help Menu
 \n============================================</dark_green></bold>
 
 \n<click:suggest_command:/net create>/net create (id)</click> - <yellow>Create a new network</yellow>
@@ -29,7 +29,7 @@ help: "\n
 "
 
 help.admin: "\n
-<bold><dark_green>          Networks v2.0 - Help Menu
+<bold><dark_green>          Networks v<1> - Help Menu
 \n============================================</dark_green></bold>
 
 \n<click:suggest_command:/net data save>/net data save</click> - <yellow>Save all networks</yellow>
