--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -146,10 +146,10 @@ item.name.wand1: <reset><blue>Priority Wand
 item.name.input: <reset>Input Container
 item.name.sorting: <reset>Sorting Container
 item.name.misc: <reset>Miscellaneous Container
-item.name.upgrade1: <reset><bold>Telemetry Antenna Tier 1
-item.name.upgrade2: <reset><bold>Telemetry Antenna Tier 2
-item.name.upgrade3: <reset><bold>Telemetry Antenna Tier 3
-item.name.upgrade4: <reset><bold>Telemetry Antenna Tier 4
+item.name.upgrade.range.0: <reset><bold>Telemetry Antenna Tier 1
+item.name.upgrade.range.1: <reset><bold>Telemetry Antenna Tier 2
+item.name.upgrade.range.2: <reset><bold>Telemetry Antenna Tier 3
+item.name.upgrade.range.3: <reset><bold>Telemetry Antenna Tier 4
 
 item.lore.wand0:
   - "<reset>Right click any network component to show information about it"
@@ -174,7 +174,7 @@ item.lore.sorting:
 item.lore.misc:
   - "<reset><blue>All remaining items will go into these"
 
-item.lore.upgrade:
+item.lore.upgrade.range:
   - "<reset>Click on a network component to apply this upgrade on its network"
 
 notice: <yellow>Having inventory problems? Try out <white>/networks <yellow>to create a fully automated storage network!
