--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -107,6 +107,7 @@ component.sorting.removeitem: <prefix>Item type <2> was removed from sorting con
 component.misc.add: <prefix>Miscellaneous container at <1> successfully added to <2>!
 component.remove: <prefix><red>Removed component at <1>
 component.exploded: <prefix><dark_red>Component at <white><1><dark_red> from network <white><2><dark_red> was blown up!
+component.invalid_block: <prefix><red>Blocks of type </red><1><red> are not allowed to be network components!</red>
 component.nocomponent: <prefix><yellow>This block is not a network component!
 component.priority: <prefix>Component priority set to <1>
 
