--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -142,8 +142,8 @@ wand.info.misc: "<green>Type: <reset>Misc Container<green>\nNetwork: <reset><1><
 items.noitems: "<prefix><red>There are no items in your storage network."
 items.message: "<green><bold>Total items in network <white><1><green>:"
 
-item.name.wand0: <reset><red>Network Wand
-item.name.wand1: <reset><blue>Priority Wand
+item.name.wand0: <reset><red>Network Wand <green>[Filter]
+item.name.wand1: <reset><red>Network Wand <blue>[Priority]
 item.name.component.input: <reset>Input Container
 item.name.component.sorting: <reset>Sorting Container
 item.name.component.misc: <reset>Miscellaneous Container
@@ -151,6 +151,13 @@ item.name.upgrade.range.0: <reset><bold>Telemetry Antenna Tier 1
 item.name.upgrade.range.1: <reset><bold>Telemetry Antenna Tier 2
 item.name.upgrade.range.2: <reset><bold>Telemetry Antenna Tier 3
 item.name.upgrade.range.3: <reset><bold>Telemetry Antenna Tier 4
+item.name.upgrade.range.4: <reset><bold>Telemetry Antenna Tier 5
+# The following are only spare tags, but aren't used in the plugin
+item.name.upgrade.range.5: <reset><bold>Telemetry Antenna Tier 6
+item.name.upgrade.range.6: <reset><bold>Telemetry Antenna Tier 7
+item.name.upgrade.range.7: <reset><bold>Telemetry Antenna Tier 8
+item.name.upgrade.range.8: <reset><bold>Telemetry Antenna Tier 9
+
 
 item.lore.wand0:
   - "<reset>Right click any network component to show information about it"
