--- a/src/main/resources/lang/de.yml
+++ b/src/main/resources/lang/de.yml
@@ -134,7 +134,7 @@ rename.taken: <prefix>Name <1> ist bereits in Verwendung.
 wand.mode: "<prefix><blue>Konfigurator Modus wurde zu [<1>] geändert"
 wand.mode.0: "Filter"
 wand.mode.1: "Priorität"
-wand.info.input: "<green>Typ: <reset>Einfüllkiste<green>\nNetzwerk: <reset><1><green>\nPosition: <reset><2><green>\n"
+wand.info.input: "<green>Typ: <reset>Einfüllkiste<green>\nNetzwerk: <reset><1><green>\nPosition: <reset><2><green>\nExtra Reichweite: <reset><3><green>\n"
 wand.info.sorting: "<green>Typ: <reset>Sortierkiste<green>\nNetzwerk: <reset><1><green>\nPosition: <reset><2><green>\nPriorität: <reset><3><green>\nFilter: <reset><4>\n"
 wand.info.misc: "<green>Typ: <reset>Restekiste<green>\nNetzwerk: <reset><1><green>\nPosition: <reset><2><green>\nPriorität: <reset><3><green>\n"
 
