--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -64,6 +64,7 @@ data.save.config: <prefix>Saved config files
 
 create.success: <prefix>Successfully created storage network <green><1>
 create.exists: <prefix><yellow>There is already a network with this name, please select another name!
+create.limit: <prefix><red>Player <white><1></white> cannot own any more networks!
 
 delete.success: <prefix>Successfully deleted storage network <green><1>
 delete.confirm: <prefix>Are you sure you want to delete storage network <1>? Please confirm with <yellow>/manager delete <1> confirm
