--- a/src/main/resources/lang/de.yml
+++ b/src/main/resources/lang/de.yml
@@ -1,6 +1,6 @@
 prefix: "<green>[Networks]<reset>  "
 
-version: "<dark_green>Networks Plugin</dark_green> von <yellow>Quantum625</yellow>\n<aqua>Version: </aqua><1>"
+version: "<dark_green>Networks Plugin</dark_green> von <yellow>NanoFlux</yellow>\n<aqua>Version: </aqua><1>"
 
 help: "\n
 <bold><dark_green>          Networks v<1> - Help Menu
@@ -14,10 +14,10 @@ help: "\n
 \n
 \n<click:suggest_command:/manager list>/manager list</click> - <yellow>Alle eigenen Netzwerke auflisten</yellow>
 \n<click:suggest_command:/manager listall>/manager listall</click> - <yellow>Alle Netzwerke auf dem Server auflisten</yellow>
-\n<click:suggest_command:/manager list>/manager list (player)</click> - <yellow>Alle Netzwerke eines anderen Spielers auflisten</yellow>
+\n<click:suggest_command:/manager list>/manager list (Spieler)</click> - <yellow>Alle Netzwerke eines anderen Spielers auflisten</yellow>
 \n
-\n<click:suggest_command:/manager user add>/manager user add (player)</click> - <yellow>Gibt einem Spieler Zugriff auf dein Netzwerk</yellow>
-\n<click:suggest_command:/manager user remove>/manager user remove (player)</click> - <yellow>Entziehe einem Spieler Rechte auf dein Netzwerk</yellow>
+\n<click:suggest_command:/manager user add>/manager user add (Spieler)</click> - <yellow>Gibt einem Spieler Zugriff auf dein Netzwerk</yellow>
+\n<click:suggest_command:/manager user remove>/manager user remove (Spieler)</click> - <yellow>Entziehe einem Spieler Rechte auf dein Netzwerk</yellow>
 \n
 \n<click:suggest_command:/manager items>/manager items</click> - <yellow>Listet alle Items in deinem Netzwerk nach Häufgkeit auf</yellow>
 \n<click:suggest_command:/manager view>/manager view</click> - <yellow>Öffnet ein Menü, mit allen deinen Items</yellow>
@@ -43,10 +43,10 @@ help.admin: "\n
 \n
 \n<click:suggest_command:/manager list>/manager list</click> - <yellow>Alle eigenen Netzwerke auflisten</yellow>
 \n<click:suggest_command:/manager listall>/manager listall</click> - <yellow>Alle Netzwerke auf dem Server auflisten</yellow>
-\n<click:suggest_command:/manager list>/manager list (player)</click> - <yellow>Alle Netzwerke eines anderen Spielers auflisten</yellow>
+\n<click:suggest_command:/manager list>/manager list (Spieler)</click> - <yellow>Alle Netzwerke eines anderen Spielers auflisten</yellow>
 \n
-\n<click:suggest_command:/manager user add>/manager user add (player)</click> - <yellow>Gibt einem Spieler Zugriff auf dein Netzwerk</yellow>
-\n<click:suggest_command:/manager user remove>/manager user remove (player)</click> - <yellow>Entziehe einem Spieler Rechte auf dein Netzwerk</yellow>
+\n<click:suggest_command:/manager user add>/manager user add (Spieler)</click> - <yellow>Gibt einem Spieler Zugriff auf dein Netzwerk</yellow>
+\n<click:suggest_command:/manager user remove>/manager user remove (Spieler)</click> - <yellow>Entziehe einem Spieler Rechte auf dein Netzwerk</yellow>
 \n
 \n<click:suggest_command:/manager items>/manager items</click> - <yellow>Listet alle Items in deinem Netzwerk nach Häufgkeit auf</yellow>
 \n<click:suggest_command:/manager view>/manager view</click> - <yellow>Öffnet ein Menü, mit allen deinen Items</yellow>
@@ -119,12 +119,16 @@ rangeupgrade.unlockfirst: <prefix><yellow>Du musst zuerst Stufe <white><1><yello
 rangeupgrade.success: <prefix>Reichweite <1> wurde im Netzwerk <2> installiert!
 
 user.add: <prefix>Spieler <2> wurde zum Netzwerk <1> hinzugefügt
-user.remove: <prefix>Spieler <2> wurde aus dem Netzwerk <1> entfernt
-user.owner: <prefix>Spieler <1> ist nun Besitzer des Netzwerks <2>
 user.add.nochange: <prefix>Spieler <2> wurde bereits zum Netzwerk <1> hinzugefügt
+user.remove: <prefix>Spieler <2> wurde aus dem Netzwerk <1> entfernt
 user.remove.nochange: <prefix>Spieler <2> war bereits kein Nutzer von <1>
-user.owner.nochange: <prefix>Spieler <2> ist bereits Besitzer von Netzwerk <1>
-
+user.owner: <prefix>Spieler <1> ist nun Besitzer des Netzwerks <2>
+user.owner.nochange: <prefix>Spieler <green><2></green> besaß schon Netzwerk <green><1></green>
+user.owner.norequest: <prefix><red>Nothing to accept</red>
+user.owner.request.acceptor: <prefix>Spieler <green><2></green> will dich zum neuen Besitzer des Netzwerks <green><1></green> machen.<newline>Nutze <yellow><click:suggest_command:/net accept >/net accept <1></click></yellow> um den Transfer zu akzeptieren.
+user.owner.request.donator: <prefix>Übertragungsanfrage wurde an Spieler <green><1></green> gesendet.
+user.owner.accept.acceptor: <prefix>Netzwerk <green><1></green> ist jetzt deins. Der vorherige Besitzer ist noch als Nutzer hinzugefügt.
+user.owner.accept.donator: <prefix>Übertragungsanfrage wurde von <green><1></green> angenommen.
 merge.identical: <prefix><red>Tut mir leid, aber das ist leider nicht möglich
 merge.nopermission: <prefix><red>Zum Zusammenführen von zwei Netzwerken musst du beide besitzen!
 merge.success: <prefix>Netzwerk <2> wurde in Netzwerk <1> integriert
